# gunk

./: .gitignore  Cargo.toml  README.md
gunk-app/: Cargo.toml
gunk-app/src/: main.rs
gunk-engine/: Cargo.toml  build.rs
gunk-engine/shaders/: ModelLayer.frag  Simple2dLayer.frag  SimpleSkyBox.frag  SimpleSkyBox.vert
gunk-engine/src/: lib.rs  resource_utils.rs
gunk-engine/src/core/: application.rs
gunk-engine/src/platform/: event_statics.rs  event_types.rs  handle_key_events.rs  handle_mouse_events.rs  mod.rs
gunk-engine/src/renderer/: camera.rs  cubemap_utils.rs  gk_bitmap.rs  light.rs  mod.rs  model.rs  wgpu_utils.rs
gunk-engine/src/renderer/renderer_layers/: batch3d_layer.rs  layer.rs  mod.rs  model_layer.rs  sprite_layer.rs
gunk-engine/src/renderer/texture/: mod.rs
gunk-engine/src/renderer/vulkan_renderer/: mod.rs  vulkan_renderer.rs
gunk-engine/src/renderer/vulkan_renderer/gk_vk_camera/: mod.rs
gunk-engine/src/renderer/vulkan_renderer/gk_vulkan/: gunk_vk_buffer.rs  gunk_vk_context.rs  gunk_vk_descriptor.rs  gunk_vk_img.rs  gunk_vk_loader.rs  gunk_vk_render_pass.rs  mod.rs  vk_shader_utils.rs  vk_utils.rs
gunk-engine/src/renderer/vulkan_renderer/sp_vk_camera/: mod.rs
gunk-engine/src/renderer/vulkan_renderer/sp_vulkan/: gunk_vk_buffer.rs  gunk_vk_descriptor.rs  splunk_vk_img.rs  splunk_vk_loader.rs  splunk_vk_render_pass.rs  vertex_data.rs  vk_utils.rs
gunk-engine/src/renderer/vulkan_renderer/vk_render_layers/: gk_vk_render_layer.rs  mod.rs  sp_vk_render_layer.rs  vk_begin_layer.rs  vk_end_layer.rs  vk_model_layer.rs  vk_simple2d_layer.rs  vk_simple3d_layer.rs  vk_simple_skybox_layer.rs
gunk-engine/src/shaders/: batch3d.wgsl  model_light.wgsl  shader.wgsl
gunky-editor/: Cargo.toml  build.rs
gunky-editor/src/lib/: index.html  lib.rs  resource.rs
splunk-engine/: Cargo.toml  build.rs
splunk-engine/shaders/: ModelLayer.frag  ModelLayer.geom  ModelLayer.vert  Simple2dLayer.frag  Simple2dLayer.vert  Simple3dLayer.frag  Simple3dLayer.vert  SimpleSkyBox.frag  SimpleSkyBox.vert
splunk-engine/src/: lib.rs
splunk-engine/src/core/: application.rs  logger.rs  mod.rs
splunk-engine/src/platform/: event_statics.rs  mod.rs
splunk-engine/src/renderer/: bitmap.rs  cubemap_utils.rs  mod.rs  renderer_utils.rs  sp_bitmap.rs
splunk-engine/src/renderer/vulkan_renderer/: mod.rs  sp_vk_render_layer.rs  vk_macros.rs  vk_utils.rs  vulkan_context.rs  vulkan_loader.rs  vulkan_renderer.rs
splunk-engine/src/renderer/vulkan_renderer/sp_vk_camera/: mod.rs
splunk-engine/src/renderer/vulkan_renderer/sp_vulkan/: mod.rs  splunk_vk_buffer.rs  splunk_vk_context.rs  splunk_vk_descriptor.rs  splunk_vk_img.rs  splunk_vk_loader.rs  splunk_vk_render_pass.rs  vertex_data.rs  vk_macros.rs  vk_shader_utils.rs  vk_utils.rs
splunk-engine/src/renderer/vulkan_renderer/vk_render_layers/: mod.rs  sp_vk_render_layer.rs  vk_begin_layer.rs  vk_end_layer.rs  vk_model_layer.rs  vk_simple2d_layer.rs  vk_simple3d_layer.rs  vk_simple_skybox_layer.rs
splunky-editor/: Cargo.toml
splunky-editor/src/: main.rs
