[package]
name = "gunk-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
log = "0.4"
anyhow = "1.0"
env_logger = "0.10"
pollster = "0.3"
wgpu = "0.16"
winit = "0.27"
nalgebra = "0.32"
nalgebra-glm = "0.18"
rapier3d = "0.17"
rapier2d = "0.17"
bytemuck = { version = "1.12", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.16", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}
nalgebra = { version = "0.32", default-features = false, features = [ "libm", "alloc" ] }
rapier3d = { version = "0.17", features = [ "wasm-bindgen" ] }
rapier2d = { version = "0.17", features = [ "wasm-bindgen" ] }