[package]
name = "gunky-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "gunky_editor_bin"
path = "src/bin/bin.rs"

[lib]
name = "gunky_editor_web"
path = "src/lib/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
gunk-engine = { path = "../gunk-engine" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"